feat: add  issue fix change

--- a/CXoneWebForm_v2.html
+++ b/CXoneWebForm_v2.html
@@ -15,7 +15,7 @@
             <div class="brand-logo logo" id="logo" aria-hidden="true"></div>
             <div>
               <!-- Large stacked brand title like screenshot -->
-              <div style="font-weight:800;color:#fff;font-size:28px;line-height:0.9">HOLLAND<br/>AMERICA<br/>LINE</div>
+              <div class="brand-stacked">HOLLAND<br/>AMERICA<br/>LINE</div>
               <div style="color:rgba(255,255,255,0.85);font-size:13px;margin-top:6px">Authentication Status:</div>
             </div>
           </div>
