feat: add code split change

--- a/CXoneWebForm.html
+++ b/CXoneWebForm.html
@@ -41,6 +41,9 @@
 						<label for="compactToggle" class="muted" style="font-size:13px;margin:0">Compact</label>
 						<input type="checkbox" id="compactToggle" aria-label="Compact mode" />
 					</div>
+					<div style="display:flex;align-items:center;gap:12px;">
+						<div id="authChip" class="chip auth-chip" aria-live="polite"></div>
+					</div>
 				</div>
 			</header>
 
