feat: add code fix change

--- a/CXoneWebForm.html
+++ b/CXoneWebForm.html
@@ -27,6 +27,7 @@
 				<div style="display:flex;align-items:center;gap:12px;">
 					<div id="authChip" class="chip auth-chip" aria-live="polite"></div>
 				</div>
+                <div id="langFlag"></div>
 			</div>
 		</header>
 
@@ -68,9 +69,6 @@
 				</div>
 				<div class="field">
 					<div class="chip" id="regChip">Registered: <span id="registeredVal">No</span></div>
-				</div>
-				<div class="field">
-					<button id="btnCheckAuth" class="btn-ghost">Check / Update Auth</button>
 				</div>
 			</div>
 
@@ -167,8 +165,7 @@
 					you</span></div>
 			<div class="control-buttons">
 				<button id="btnCancel" class="btn-ghost">Cancel</button>
-				<button id="btnSave" class="btn-save">Save</button>
-				<button id="btnNext" class="btn-next" disabled>Next</button>
+				<button id="btnNext" class="btn-next" disabled>Save & Next</button>
 			</div>
 		</div>
 	</div>
