feat: add cxone studio script test change

--- a/cxone-work-item-form/cunard_form.html
+++ b/cxone-work-item-form/cunard_form.html
@@ -71,6 +71,29 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Employee & Reviewer Details -->
+            <div class="panel-card">
+                <div class="panel-header">EMPLOYEE & REVIEWER DETAILS</div>
+                <div class="panel-content">
+                    <div class="detail-item">
+                        <span class="detail-label">Agent:</span>
+                        <span class="detail-value">John Smith</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="detail-label">Team:</span>
+                        <span class="detail-value">Dev</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="detail-label">Role:</span>
+                        <span class="detail-value">Reservation Specialist</span>
+                    </div>
+                    <div class="detail-item">
+                        <span class="detail-label">Reviewer:</span>
+                        <span class="detail-value">Jane Doe</span>
+                    </div>
+                </div>
+            </div>
         </aside>
 
         <!-- Center Panel -->
