--- a/cxone-work-item-form/renders/test-3-with-header-commented.html
+++ b/cxone-work-item-form/renders/test-3-with-header-commented.html
@@ -28,7 +28,7 @@
                     <div class="work-item-list">
                         <div class="work-item"><img
                                 src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='%23e74c3c'%3E%3Ccircle cx='12' cy='12' r='10' stroke='%23e74c3c' stroke-width='2' fill='none'/%3E%3Cline x1='15' y1='9' x2='9' y2='15' stroke='%23e74c3c' stroke-width='2'/%3E%3Cline x1='9' y1='9' x2='15' y2='15' stroke='%23e74c3c' stroke-width='2'/%3E%3C/svg%3E"
-                                alt="Cancel">
+                                alt="Cancel" width="48px" height="48px">
                             <div class="work-item-text">
                                 <div class="work-item-name">Cancellation Waive Fee</div>
                                 <div class="work-item-sub">Air • Package • Transfer</div>
