feat: add code fix change

--- a/cxone-work-item-form/to_host/TEST CORRECTION REQUEST.html
+++ b/cxone-work-item-form/to_host/TEST CORRECTION REQUEST.html
@@ -6,7 +6,7 @@
             <div style="display: grid;gap: 24px 16px;margin-bottom: 16px;">
                 <div style="position: relative;">
                     <div>
-                        <p><input type="checkbox" id="missingDocumentation" value="missingDocumentation" name="wi_coachCorrReason" {wi_coachCorrReason contains 'missingDocumentation' ? 'checked' : ''}> Missing Documentation
+                        <p><input type="checkbox" id="missingDocumentation" value="missingDocumentation" name="wi_coachCorrReason"> Missing Documentation
                         </p>
                         <p><input type="checkbox" id="incorrectCancellation" value="incorrectCancellation" name="wi_coachCorrReason"> Incorrect
                             Cancellation</p>
@@ -17,18 +17,23 @@
                 </div>
                 <div style="position: relative;" hidden id="otherCorrectionField">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrComments">Other Correction:</label>
-                    <input type="text" name="wi_coachCorrComments" value="{wi_coachCorrComments}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrComments" />
+                    <input type="text" name="wi_coachCorrComments" value="{wi_coachCorrComments}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrComments" maxlength="25" placeholder="Enter other correction details..."/>
+                </div>
+                <div style="position: relative;">
+                    <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_corrDate">Correction Date:</label>
+                    <input type="hidden" name="wi_corrDate" id="wi_corrDate" value="{wi_corrDate}">
+                    <input type="date" min="{global:minToday}" onchange="document.getElementById('wi_corrDate').value=this.value;" value="{wi_corrDate}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" placeholder="Enter correction date..."/>
                 </div>
                 <div style="position: relative;">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrNVComments">Non-Visible Message:</label>
                     <textarea id="wi_coachCorrNVComments" name="wi_coachCorrNVComments" style="width: 100%;height: 60px;resize: vertical;border-radius: 4px;border: 1px solid #999999;"
-                        placeholder="Paste transcript or chat history...">{wi_coachCorrNVComments}</textarea>
+                        placeholder="Enter internal comments not visible to agent receiving correction...">{wi_coachCorrNVComments}</textarea>
                 </div>
             </div>
             <div style="display: flex;gap: 16px;justify-content: flex-end;margin-top: 16px;">
-                <input type="hidden" name="wi_status" id="wi_status">
-                <button onclick="document.getElementById('wi_status').value='cancel';" style="padding: 12px;border-radius: 4px; font-size: 11px;font-weight: bold;cursor: pointer;text-transform: uppercase;letter-spacing: 0.3px;background: transparent;color: #666666;border: 1px solid #ccc;" id="cancelModalBtn">Cancel</button>
-                <button onclick="document.getElementById('wi_status').value='correctionConfirm';" style="padding: 12px;border-radius: 4px;font-size: 11px;font-weight: bold;cursor: pointer;text-transform: uppercase;letter-spacing: 0.3px;background: {global:secondaryColor};color: #ffffff;" id="confirmBtn">Confirm</button>
+                <input type="hidden" name="wi_coachCorrStatus" id="wi_coachCorrStatus">
+                <button name="submit" onclick="document.getElementById('wi_coachCorrStatus').value='cancel';" style="padding: 12px;border-radius: 4px; font-size: 11px;font-weight: bold;cursor: pointer;text-transform: uppercase;letter-spacing: 0.3px;background: transparent;color: #666666;border: 1px solid #ccc;" id="cancelModalBtn">Cancel</button>
+                <button name="submit" onclick="document.getElementById('wi_coachCorrStatus').value='confirm';" style="padding: 12px;border-radius: 4px;font-size: 11px;font-weight: bold;cursor: pointer;text-transform: uppercase;letter-spacing: 0.3px;background: {global:secondaryColor};color: #ffffff;" id="confirmBtn">Confirm</button>
             </div>
         </div>
     </div>
