--- a/cxone-work-item-form/to_host/TEST COACHING REQUEST.html
+++ b/cxone-work-item-form/to_host/TEST COACHING REQUEST.html
@@ -7,7 +7,7 @@
                 <div style="position: relative;">
                     <p style="margin-bottom: 6px;font-weight: 500;font-size: 16px;color: black; ">Concern Item/s:</p>
                     <div>
-                        <p><input type="checkbox" id="lacksBookingHistoryComments" value="lacksBookingHistoryComments" name="wi_coachCorrReason" {wi_coachCorrReason contains 'lacksBookingHistoryComments' ? 'checked' : ''}> Lacks
+                        <p><input type="checkbox" id="lacksBookingHistoryComments" value="lacksBookingHistoryComments" name="wi_coachCorrReason"> Lacks
                             Booking
                             History Comments</p>
                         <p><input type="checkbox" id="lacksCommentsInCancelWaiverScreen" value="lacksCommentsInCancelWaiverScreen" name="wi_coachCorrReason">
@@ -29,18 +29,23 @@
                 </div>
                 <div style="position: relative;" hidden id="otherCoachingDetailsField">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrComments">Other Coaching Details:</label>
-                    <input type="text" name="wi_coachCorrComments" value="{wi_coachCorrComments}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrComments" />
+                    <input type="text" name="wi_coachCorrComments" value="{wi_coachCorrComments}" style="width: 100%;height: 30px;border-radius: 4px;border: 1px solid #999999;" id="wi_coachCorrComments" maxlength="25" placeholder="Enter other coaching details..."/>
+                </div>
+                <div style="position: relative;">
+                    <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachComments">Additional Comments:</label>
+                    <textarea id="wi_coachComments" name="wi_coachComments" style="width: 100%;height: 60px;resize: vertical;border-radius: 4px;border: 1px solid #999999;"
+                        placeholder="Enter additional comments...">{wi_coachComments}</textarea>
                 </div>
                 <div style="position: relative;">
                     <label style="font-size: 13px;color: #6b7280;position: absolute;top: -10px;left: 22px;background-color: white;padding: 0 4px;" for="wi_coachCorrNVComments">Non-Visible Message:</label>
                     <textarea id="wi_coachCorrNVComments" name="wi_coachCorrNVComments" style="width: 100%;height: 60px;resize: vertical;border-radius: 4px;border: 1px solid #999999;"
-                        placeholder="Paste transcript or chat history...">{wi_coachCorrNVComments}</textarea>
+                        placeholder="Enter internal comments not visible to agent receiving coaching...">{wi_coachCorrNVComments}</textarea>
                 </div>
             </div>
             <div style="display: flex;gap: 16px;justify-content: flex-end;margin-top: 16px;">
-                <input type="hidden" name="wi_status" id="wi_status">
-                <button onclick="document.getElementById('wi_status').value='cancel';" style="padding: 12px;border-radius: 4px; font-size: 11px;font-weight: bold;cursor: pointer;text-transform: uppercase;letter-spacing: 0.3px;background: transparent;color: #666666;border: 1px solid #ccc;" id="cancelModalBtn">Cancel</button>
-                <button onclick="document.getElementById('wi_status').value='coachingConfirm';" style="padding: 12px;border-radius: 4px;font-size: 11px;font-weight: bold;cursor: pointer;text-transform: uppercase;letter-spacing: 0.3px;background: {global:secondaryColor};color: #ffffff;" id="confirmBtn">Confirm</button>
+                <input type="hidden" name="wi_coachCorrStatus" id="wi_coachCorrStatus">
+                <button name="submit" onclick="document.getElementById('wi_coachCorrStatus').value='cancel';" style="padding: 12px;border-radius: 4px; font-size: 11px;font-weight: bold;cursor: pointer;text-transform: uppercase;letter-spacing: 0.3px;background: transparent;color: #666666;border: 1px solid #ccc;" id="cancelModalBtn">Cancel</button>
+                <button name="submit" onclick="document.getElementById('wi_coachCorrStatus').value='confirm';" style="padding: 12px;border-radius: 4px;font-size: 11px;font-weight: bold;cursor: pointer;text-transform: uppercase;letter-spacing: 0.3px;background: {global:secondaryColor};color: #ffffff;" id="confirmBtn">Confirm</button>
             </div>
         </div>
     </div>
