--- a/cxone-work-item-form/dynamicSearchableAutocomplete/index.html
+++ b/cxone-work-item-form/dynamicSearchableAutocomplete/index.html
@@ -114,7 +114,7 @@
             const value = document.getElementById("search").value;
 
             if (window.CXone) {
-                window.CXone.sendMessage({ autocompleteValue: value });
+                window.CXone.sendMessage({ wi_search: value });
             } else {
                 alert("Returned value: " + value);
             }
@@ -139,6 +139,5 @@
     </div>
 
     <button onclick="submitValue()">Submit</button>
-    <!-- <script type="module" src="https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/dynamicSearchableAutocomplete/index.js"></script> -->
 </body>
 </html>
