--- a/cxone-work-item-form/to_host/TEST AUTOCOMPLETE.html
+++ b/cxone-work-item-form/to_host/TEST AUTOCOMPLETE.html
@@ -1,130 +1,43 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8" />
-    <title>Autocomplete Form</title>
+<data>
+    <!DOCTYPE html>
+    <html>
 
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            padding: 20px;
-        }
+    <head>
+        <meta charset="UTF-8" />
+        <title>Autocomplete Form</title>
 
-        .autocomplete-container {
-            position: relative;
-            width: 320px;
-        }
-
-        input {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #999;
-            border-radius: 4px;
-            font-size: 14px;
-        }
-
-        .suggestions {
-            position: absolute;
-            top: 40px;
-            width: 100%;
-            background: white;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            max-height: 200px;
-            overflow-y: auto;
-            z-index: 999;
-        }
-
-        .suggestion-item {
-            padding: 8px;
-            cursor: pointer;
-        }
-
-        .suggestion-item:hover {
-            background: #f0f0f0;
-        }
-
-        button {
-            margin-top: 20px;
-            padding: 10px 14px;
-            background: #0066cc;
-            color: white;
-            border-radius: 4px;
-            border: none;
-            cursor: pointer;
-        }
-    </style>
-
-    <script>
-        let items = [];
-        async function loadData() {
-            const url = "https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/dynamicSearchableAutocomplete/data.json"
-            try {
-                const res = await fetch(url);
-                items = await res.json();
-            } catch (error) {
-                console.error("Error fetching JSON:", error);
+        <style>
+            .suggestion-item {
+                padding: 8px;
+                cursor: pointer;
             }
-        }
 
-        function filterData(query) {
-            query = query.toLowerCase();
-            return items.filter(item => item.toLowerCase().includes(query)).slice(0, 25);
-        }
-
-        function setupAutocomplete() {
-            const input = document.getElementById("search");
-            const list = document.getElementById("suggestions");
-
-            input.addEventListener("input", () => {
-                list.innerHTML = "";
-                const value = input.value.trim();
-                if (value.length === 0) return;
-
-                const results = filterData(value);
-
-                results.forEach(result => {
-                    const div = document.createElement("div");
-                    div.className = "suggestion-item";
-                    div.textContent = result;
-                    div.onclick = () => {
-                        input.value = result;
-                        list.innerHTML = "";
-                    };
-                    list.appendChild(div);
-                });
-            });
-        }
-
-        function submitValue() {
-            const value = document.getElementById("search").value;
-            
-            console.log("CXone available?", window.CXone);
-            console.log("Page loaded in CXone?", window.CXone ? "YES" : "NO");
-
-            if (window.CXone) {
-                window.CXone.sendMessage({ autocompleteValue: value });
-            } else {
-                alert("Returned value: " + value);
+            .suggestion-item:hover {
+                background: #f0f0f0;
             }
-        }
+        </style>
+    </head>
 
-        window.onload = async () => {
-            await loadData();
-            setupAutocomplete();
-        };
-    </script>
-</head>
+    <body style="font-family: Arial, sans-serif;padding: 20px;">
+        <h2>Autocomplete Example</h2>
 
-<body>
-    <h2>Autocomplete Example</h2>
+        <div class="autocomplete-container" style="position: relative;width: 320px;">
+            <input style="width: 100%;padding: 10px;border: 1px solid #999;border-radius: 4px;font-size: 14px;"
+                id="search" name="wi_search" type="text" placeholder="Type to search..." />
 
-    <div class="autocomplete-container">
-        <input id="search" type="text" placeholder="Type to search..." />
+            <div id="suggestions" class="suggestions"
+                style="position: absolute;top: 40px;width: 100%;background: white;border: 1px solid #ccc;border-radius: 4px;max-height: 200px;overflow-y: auto;z-index: 999;">
+            </div>
+        </div>
+        <button
+            style="margin-top: 20px;padding: 10px 14px;background: #0066cc;color: white;border-radius: 4px;border: none;cursor: pointer;">Submit</button>
 
-        <div id="suggestions" class="suggestions"></div>
-    </div>
+        <!-- <button
+            style="margin-top: 20px;padding: 10px 14px;background: #0066cc;color: white;border-radius: 4px;border: none;cursor: pointer;"
+            onclick="submitValue()">Submit</button> -->
+        <script type="module"
+            src="https://shubhamrathi1224.github.io/webFormCXone/cxone-work-item-form/dynamicSearchableAutocomplete/index.js"></script>
+    </body>
 
-    <button onclick="submitValue()">Submit</button>
-</body>
-</html>
+    </html>
+</data>
